test/cli/test-generating-policy/namespaced/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kube-root-ca.crt
  namespace: default
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    Test Certificate Content
    -----END CERTIFICATE-----
